# post-align

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
dockerscripts/: build.sh
postalign/: cli.py  entry.py  processor.py
postalign/models/: __init__.py  _sequence.py  aa_position.py  message.py  modifier.py  na_position.py  position_flag.py  sequence.py
postalign/parsers/: fasta.py  minimap2.py  msa.py  paf.py
postalign/processors/: __init__.py  apply_frameshift.py  base.py  codon_alignment.py  save_fasta.py  save_json.py  trim_by_ref.py
postalign/utils/: __init__.py  blosum.json  blosum62.py  cigar.py  codonutils.py  group_by_codons.py  iupac.py
tests/: conftest.py  test_aa_position.py  test_blosum62.py  test_cigar.py  test_cli.py  test_codon_alignment.py  test_codonutils.py  test_entry.py  test_group_by_codons.py  test_iupac.py  test_message.py  test_paf.py  test_parsers.py  test_sanitize_sequence.py  test_save_fasta.py  test_save_json.py  test_sequence.py  test_trim_by_ref.py  test_version.py
tests/component/data/: hiv1_reference.fas  samplesmall.fas
tests/component/features/: codon_alignment.feature
tests/component/steps/: codon_steps.py  run_codon_alignment.py
tests/unit/: conftest.py  test_aa_position.py  test_cigar.py  test_codon_alignment.py  test_modifier.py  test_na_position.py  test_paf.py  test_parsers.py  test_processor.py  test_save_fasta.py  test_save_json.py  test_version.py
