[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "post-align"
dynamic = ["version", "dependencies"]
description = "A post alignment toolkit for refining pairwise/multiple alignment sequences."
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Philip Tzou", email = "philiptz@stanford.edu"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
postalign = "postalign.entry:cli"

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "postalign.version.VERSION"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["postalign*"]

[tool.setuptools.package-data]
postalign = ["py.typed"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
